:children_crossing: improve resized images quality and fix step link cropped in firefox

--- a/inertia/assets/css/components/_step.scss
+++ b/inertia/assets/css/components/_step.scss
@@ -153,6 +153,7 @@
     a {
       @include mixins.font-type('text-medium');
       font-weight: 500;
+      line-height: 1.14;
       color: var(--primary);
       text-decoration: underline;
       text-overflow: ellipsis;
